Support for older browsers complete and fix for svg white space

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -93,24 +93,24 @@
 }
 
 /* Begin Equal Height Rules */
-.row--equal-height-at-medium {
+.flexbox .row--equal-height-at-medium {
     @mixin atMedium {
         display: flex;
     }
 }
 
-.row--equal-height-at-medium > div {
+.flexbox .row--equal-height-at-medium > div {
     float: none;
     display: flex;
 }
 
-.row--equal-height-at-large {
-@mixin atLarge {
-    display: flex;
-}
+.flexbox .row--equal-height-at-large {
+    @mixin atLarge {
+        display: flex;
+    }
 }
 
-.row--equal-height-at-large > div {
+.flexbox .row--equal-height-at-large > div {
     float: none;
     display: flex;
 }
